--- a/service/src/main/resources/application.conf
+++ b/service/src/main/resources/application.conf
@@ -11,12 +11,10 @@ akka {
   }
 
   cluster {
-    seed-nodes = ["akka.tcp://ClusterSystem@127.0.0.1:2551", "akka.tcp://ClusterSystem@127.0.0.1:2552"]
+    seed-nodes = ["akka.tcp://dosar@127.0.0.1:2551", "akka.tcp://dosar@127.0.0.1:2552"]
   }
 }
 
-akka.cluster.http.management.hostname = "127.0.0.1"
-akka.cluster.http.management.port = 19999
 # Disable legacy metrics in akka-cluster.
 akka.cluster.metrics.enabled=off
 
@@ -25,4 +23,4 @@ akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
 
 # Sigar native library extract location during tests.
 # Note: use per-jvm-instance folder when running multiple jvm on one host.
-akka.cluster.metrics.native-library-extract-folder=${user.dir}/target/native
+akka.cluster.metrics.native-library-extract-folder=${user.dir}/target/${port}
