--- a/config-client/src/main/resources/application.conf
+++ b/config-client/src/main/resources/application.conf
@@ -1,18 +1,18 @@
 akka {
   actor {
-    provider = "cluster"
+    provider = "remote"
   }
-  remote {
-    log-remote-lifecycle-events = off
-    netty.tcp {
-      hostname = "127.0.0.1"
-      port = ${port}
-    }
-  }
+#  remote {
+#    log-remote-lifecycle-events = off
+#    netty.tcp {
+#      hostname = "127.0.0.1"
+#      port = ${port}
+#    }
+#  }
 
-  cluster {
-    seed-nodes = ["akka.tcp://dosar@127.0.0.1:2551", "akka.tcp://dosar@127.0.0.1:2552"]
-  }
+#  cluster {
+#    seed-nodes = ["akka.tcp://dosar@127.0.0.1:2551", "akka.tcp://dosar@127.0.0.1:2552"]
+#  }
 }
 
 # Disable legacy metrics in akka-cluster.
@@ -23,4 +23,4 @@ akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
 
 # Sigar native library extract location during tests.
 # Note: use per-jvm-instance folder when running multiple jvm on one host.
-akka.cluster.metrics.native-library-extract-folder=${user.dir}/target/${port}
+akka.cluster.metrics.native-library-extract-folder=${user.dir}/target/client
