--- a/service/src/main/resources/application.conf
+++ b/service/src/main/resources/application.conf
@@ -13,13 +13,22 @@ akka {
   cluster {
     seed-nodes = ["akka.tcp://dosar@127.0.0.1:2551", "akka.tcp://dosar@127.0.0.1:2552"]
   }
+
+  serializers {
+    java = "akka.serialization.JavaSerializer"
+    proto = "akka.remote.serialization.ProtobufSerializer"
+  }
+
+  serialization-bindings {
+    "ru.dosar.service.protocol.ProtoMessage" = proto
+  }
 }
 
 # Disable legacy metrics in akka-cluster.
 akka.cluster.metrics.enabled=off
 
 # Enable metrics extension in akka-cluster-metrics.
-akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension"]
+akka.extensions=["akka.cluster.metrics.ClusterMetricsExtension", "akka.cluster.client.ClusterClientReceptionist"]
 
 # Sigar native library extract location during tests.
 # Note: use per-jvm-instance folder when running multiple jvm on one host.
