* custom message serialization * fixed a bug with message matching * some statistics for sent/failed message requests

--- a/service/src/main/resources/application.conf
+++ b/service/src/main/resources/application.conf
@@ -1,6 +1,14 @@
 akka {
   actor {
     provider = "cluster"
+    allow-java-serialization = false
+
+    serializers.custom = "ru.dosar.service.protocol.ProtocolSerializer"
+
+    serialization-bindings {
+      "java.io.Serializable" = none
+      "ru.dosar.service.protocol.CustomMessage" = custom
+    }
   }
   remote {
     log-remote-lifecycle-events = off
@@ -14,13 +22,11 @@ akka {
     seed-nodes = ["akka.tcp://dosar@127.0.0.1:2551", "akka.tcp://dosar@127.0.0.1:2552"]
   }
 
-  serializers {
-    java = "akka.serialization.JavaSerializer"
-    proto = "akka.remote.serialization.ProtobufSerializer"
-  }
+  serializers.java = "akka.serialization.JavaSerializer"
 
+  serializers.custom = "ru.dosar.service.protocol.ProtocolSerializer"
   serialization-bindings {
-    "ru.dosar.service.protocol.ProtoMessage" = proto
+    "ru.dosar.service.protocol.CustomMessage" = custom
   }
 }
 
