--- a/config-client/src/main/resources/application.conf
+++ b/config-client/src/main/resources/application.conf
@@ -1,6 +1,14 @@
 akka {
   actor {
     provider = "remote"
+    allow-java-serialization = false
+
+    serializers.custom = "ru.dosar.service.protocol.ProtocolSerializer"
+
+    serialization-bindings {
+      "java.io.Serializable" = none
+      "ru.dosar.service.protocol.CustomMessage" = custom
+    }
   }
 #  remote {
 #    log-remote-lifecycle-events = off
@@ -13,6 +21,10 @@ akka {
 #  cluster {
 #    seed-nodes = ["akka.tcp://dosar@127.0.0.1:2551", "akka.tcp://dosar@127.0.0.1:2552"]
 #  }
+
+  cluster.client {
+    buffer-size = 10000
+  }
 }
 
 # Disable legacy metrics in akka-cluster.
